--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,9 +4,7 @@ version = "0.1.0"
 description = "An AI-powered hedge fund that uses multiple agents to make trading decisions"
 authors = ["Your Name <your.email@example.com>"]
 readme = "README.md"
-packages = [
-    { include = "src" }
-]
+packages = [{ include = "src" }]
 [tool.poetry.dependencies]
 python = "^3.9"
 langchain = "0.3.0"
@@ -17,7 +15,7 @@ numpy = "^1.24.0"
 python-dotenv = "1.0.0"
 matplotlib = "^3.9.2"
 yfinance = "^0.2.51"
-akshare = "^1.11.22"
+akshare = "^1.15.95"
 requests = "^2.31.0"
 beautifulsoup4 = "^4.12.3"
 openai = "^1.12.0"
